--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "test": "ember try:each"
   },
   "dependencies": {
-    "ember-cli-babel": "^5.1.7"
+    "anychart": "^7.12.0",
+    "ember-cli-babel": "^5.1.7",
+    "ember-cli-node-assets": "^0.1.6"
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
