--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
   },
   "dependencies": {
     "anychart": "^7.12.0",
-    "ember-cli-babel": "^5.1.7",
-    "ember-cli-node-assets": "^0.1.6"
+    "ember-cli-babel": "^5.1.7"
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
