--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "ember-anychart",
   "dependencies": {
     "ember": "~2.10.0",
-    "ember-cli-shims": "0.1.3"
+    "ember-cli-shims": "0.1.3",
+    "proj4": "~2"
   }
 }
